--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="css.jpg"> 
             </div>
           </div>
-        </div>bbb
+        </div>
       </div>
       </div>
 
